get status message working locally

--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,18 @@
     "license": "MIT",
     "author": "Microsoft",
     "scripts": {
-        "start": "node index.js"
+        "start": "node index.js --exec \"npm run lint && node\"",
+        "lint": "./node_modules/.bin/eslint **/*.js"
+    },
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "morgan": "^1.10.0",
+        "nodemon": "^2.0.4"
+    },
+    "devDependencies": {
+        "eslint": "^7.4.0",
+        "eslint-plugin-vue": "^6.2.2"
     }
 }
