--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "license": "MIT",
     "author": "Microsoft",
     "scripts": {
-        "start": "node ./client/index.js"
+        "start": "node index.js"
     }
 }
